--- a/views/create.html
+++ b/views/create.html
@@ -1,54 +1,62 @@
 <h1> Create </h1>
 
-<!-- Task/Challenge 1 -->
-<h2> Tie dye - everyone and their mothers are doing it, so can you! </h2>
+<div class="section">
+    <!-- Task/Challenge 1 -->
+    <h2 id="create_01_00"> Tie dye - everyone and their mothers are doing it, so can you! </h2>
 
-<h3> Supplies: </h3>
-<p> - Fabric dye (from a tie dye kit) </p>
-<p> - Rubber bands </p>
-<p> - Tarp or some sort of protective covering </p>
-<p> - White clothes </p>
+    <h3> Supplies: </h3>
+    <p> - Fabric dye (from a tie dye kit) </p>
+    <p> - Rubber bands </p>
+    <p> - Tarp or some sort of protective covering </p>
+    <p> - White clothes </p>
 
-<h3> Steps: </h3>
-<p> 1) Lay down your protective tarp so you don’t dye your table. </p>
-<p> 2) Take your white article of clothing and soak it in water. </p>
-<p> 3) Wring it out and tie with rubber bands. </p> 
-<p> 4) Squirt different color dye in desired sections. </p>
-<p> 5) Let dry, rinse, and wash. </p>
+    <h3> Steps: </h3>
+    <p id="create_01_01"> 1) Lay down your protective tarp so you don’t dye your table. </p>
+    <p id="create_01_02"> 2) Take your white article of clothing and soak it in water. </p>
+    <p id="create_01_03"> 3) Wring it out and tie with rubber bands. </p>
+    <p id="create_01_04"> 4) Squirt different color dye in desired sections. </p>
+    <p id="create_01_05"> 5) Let dry, rinse, and wash. </p>
+    <button onclick="addGoal('create_01')" class="lightBlue">Add to MyList</button>
+</div>
+<br>
+<br>
 
-<br> 
-<br> 
-<!-- Task/Challenge 2 -->
-<h2> Make a playlist - the perfect way to keep your vibe strong through quarantine.</h2>
+<div class="section">
+    <!-- Task/Challenge 2 -->
+    <h2 id="create_02_00"> Make a playlist - the perfect way to keep your vibe strong through quarantine.</h2>
 
-<h3> Supplies: </h3>
-<p> - Music streaming site (Apple Music, Spotify, Youtube - premium or not, doesn’t matter) </p>
+    <h3> Supplies: </h3>
+    <p> - Music streaming site (Apple Music, Spotify, Youtube - premium or not, doesn’t matter) </p>
 
-<h3> Steps: </h3>
-<p> 1) Pick a theme - a big concept (like love, or friendship), weather (like rain or sunny), day of the week, month, animal, mood (like happy, sad). </p>
-<p> 2) Pick a cover photo - You can pick one from google or even take your own! It can fit your theme or just be something you like. </p>
-<p> 3) Add songs that fit the theme - add songs you know, add songs you like, listen to some new songs and add those! </p> 
+    <h3> Steps: </h3>
+    <p id="create_02_01"> 1) Pick a theme - a big concept (like love, or friendship), weather (like rain or sunny), day of the week, month, animal, mood (like happy, sad). </p>
+    <p id="create_02_02"> 2) Pick a cover photo - You can pick one from google or even take your own! It can fit your theme or just be something you like. </p>
+    <p id="create_02_03"> 3) Add songs that fit the theme - add songs you know, add songs you like, listen to some new songs and add those! </p>
 
-<br> 
-<br> 
+    <button onclick="addGoal('create_02')" class="lightBlue">Add to MyList</button>
+</div>
+
+
+<br>
+<br>
 <!-- Task/Challenge 3 -->
-<h2> Make a mood board - share your dreams, current mood, or anything else your feeling visually.</h2>
+<div class="section">
+    <h2 id="create_03_00"> Make a mood board - share your dreams, current mood, or anything else your feeling visually.</h2>
 
-<h3> Supplies: </h3>
-<p> - Magazines, photos </p>
-<p> - Stickers </p>
-<p> - Glue </p>
-<p> - Tape </p>
-<p> - Paper </p>
-<p> - Scissors </p>
+    <h3> Supplies: </h3>
+    <p> - Magazines, photos </p>
+    <p> - Stickers </p>
+    <p> - Glue </p>
+    <p> - Tape </p>
+    <p> - Paper </p>
+    <p> - Scissors </p>
 
-<h3> Steps: </h3>
-<p> 1) Find some photos, phrases or words, colors, images that you like and cut them out .</p>
-<p> 2) Place down a larger piece of paper.  </p>
-<p> 3) Lay out the images/photos/words/phrases you like and re-arrange a thousand more times until you find a composition you enjoy - don’t be afraid to layer and overlap. </p> 
-<p> 4) Tape or glue your content down. </p>
-<p> 5) Add stickers or glitter or draw over things. </p>
-
+    <h3> Steps: </h3>
+    <p id="create_03_01"> 1) Find some photos, phrases or words, colors, images that you like and cut them out .</p>
+    <p id="create_03_02"> 2) Place down a larger piece of paper. </p>
+    <p id="create_03_03"> 3) Lay out the images/photos/words/phrases you like and re-arrange a thousand more times until you find a composition you enjoy - don’t be afraid to layer and overlap. </p>
+    <p id="create_03_04"> 4) Tape or glue your content down. </p>
+    <p id="create_03_05"> 5) Add stickers or glitter or draw over things. </p>
+    <button onclick="addGoal('create_03')" class="lightBlue">Add to MyList</button>
+</div>
 <button onclick="back()" class="red"> &lt; &lt; </button>
-
-
