--- a/views/garden.html
+++ b/views/garden.html
@@ -1,51 +1,59 @@
 <h1> Garden </h1>
 
-<!-- Task/Challenge 1 -->
-<h2>Grow with some seeds</h2>
+<div class="section">
+    <!-- Task/Challenge 1 -->
+    <h2 id="garden_01_00">Grow with some seeds</h2>
 
-<h3> Supplies: </h3>
-<p> - Seeds </p>
-<p> - Soil </p>
-<p> - Pots </p>
-<p> - Water </p>
+    <h3> Supplies: </h3>
+    <p> - Seeds </p>
+    <p> - Soil </p>
+    <p> - Pots </p>
+    <p> - Water </p>
 
-<h3> Steps: </h3>
-<p> 1) Fill your pot with dirt </p>
-<p> 2) Dig a little well in the dirt - don’t be afraid to get your hands a little dirty. </p>
-<p> 3) Place your seeds in the hole. </p> 
-<p> 4) Cover with more dirt. </p>
-<p> 5) Water! And don’t forget to water every few days. </p>
+    <h3> Steps: </h3>
+    <p id="garden_01_01"> 1) Fill your pot with dirt </p>
+    <p id="garden_01_02"> 2) Dig a little well in the dirt - don’t be afraid to get your hands a little dirty. </p>
+    <p id="garden_01_03"> 3) Place your seeds in the hole. </p>
+    <p id="garden_01_04"> 4) Cover with more dirt. </p>
+    <p id="garden_01_05"> 5) Water! And don’t forget to water every few days. </p>
+    <button onclick="addGoal('garden_01')" class="lightBlue">Add to MyList</button>
+</div>
+<br>
+<br>
+<div class="section">
+    <!-- Task/Challenge 2 -->
+    <h2 id="garden_02_00"> Grow some vegetables - don’t have seeds? Don’t worry! Just open your fridge - works really well for scallions. </h2>
 
-<br> 
-<br> 
-<!-- Task/Challenge 2 -->
-<h2> Grow some vegetables - don’t have seeds? Don’t worry! Just open your fridge - works really well for scallions. </h2>
+    <h3> Supplies: </h3>
+    <p> - Scallions </p>
+    <p> - Glass/cup </p>
+    <p> - Water </p>
 
-<h3> Supplies: </h3>
-<p> - Scallions </p>
-<p> - Glass/cup </p>
-<p> - Water </p>
+    <h3> Steps: </h3>
+    <p id="garden_02_01"> 1) Grab your scallions and cut those roots off.</p>
+    <p id="garden_02_02"> 2) drop those roots in a glass of enough water to cover them - make sure the roots point down.</p>
+    <p id="garden_02_03"> 3) Now scallions will regrow! Be sure to change the water every couple of days. </p>
+    <button onclick="addGoal('garden_02')" class="lightBlue">Add to MyList</button>
+</div>
 
-<h3> Steps: </h3>
-<p> 1) Grab your scallions and cut those roots off.</p>
-<p> 2) drop those roots in a glass of enough water to cover them - make sure the roots point down.</p>
-<p> 3) Now scallions will regrow! Be sure to change the water every couple of days. </p> 
+<br>
+<br>
 
-<br> 
-<br> 
+<div class="section">
 <!-- Task/Challenge 3 -->
-<h2> Make a fake garden - don’t have any supplies to grow anything real? Make a fun fake garden</h2>
+<h2 id="garden_03_00"> Make a fake garden - don’t have any supplies to grow anything real? Make a fun fake garden</h2>
 
 <h3> Supplies: </h3>
 <p> - Shoebox </p>
 <p> - Art supplies (glue, tape, paper, scissors, pipe cleaners, popsicle sticks) </p>
 
 <h3> Steps: </h3>
-<p> 1) Remove the lid off your shoebox - you can use just the bottom half - flip it upside down so you have a flat surface to work with.</p>
-<p> 2) Cut green paper (you can also paint or color white paper) to look like grass and tape/glue to box. </p>
-<p> 3) Use pipe cleaners or popsicle sticks and paper to make flowers and plants.</p> 
-<p> 4) Tape or glue those plants to the box.</p>
-<p> 5) Put your box in the window - it’s just like a window box planter! </p>
-
+<p id="garden_03_01"> 1) Remove the lid off your shoebox - you can use just the bottom half - flip it upside down so you have a flat surface to work with.</p>
+<p id="garden_03_02"> 2) Cut green paper (you can also paint or color white paper) to look like grass and tape/glue to box. </p>
+<p id="garden_03_03"> 3) Use pipe cleaners or popsicle sticks and paper to make flowers and plants.</p>
+<p id="garden_03_04"> 4) Tape or glue those plants to the box.</p>
+<p id="garden_03_05"> 5) Put your box in the window - it’s just like a window box planter! </p>
+     <button onclick="addGoal('garden_03')" class="lightBlue">Add to MyList</button>
+</div>
 
 <button onclick="back()" class="red"> &lt; &lt; </button>
